[package]
name = "minimum-base"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "A collection of utilites for games."
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/minimum"
homepage = "https://github.com/aclysma/minimum"
keywords = ["game", "engine", "utilities", "ecs"]
categories = ["algorithms", "data-structures", "game-engines", "memory-management"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
default = ["std"]
std = ["no-std-compat/std"]

[dependencies]
hashbrown = "0.5"
mopa = "0.2"
log = "0.4"
derivative = "1.0"
no-std-compat = { version = "0.2", features = [ "alloc", "compat_macros" ] }
