[package]
name = "minimum-demo"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

[features]
default = ["editor"]
dx12 = ["rendy/dx12"]
metal = ["rendy/metal"]
vulkan = ["rendy/vulkan"]
editor = ["minimum-framework/editor", "imgui-inspect-derive/generate_code", "minimum-framework/editor", "imgui", "imgui-sys", "imgui-winit-support", "imgui-inspect"]

[dependencies]
# math
nalgebra        = { version = "0.18", features = [ "serde-serialize" ] }
nalgebra-glm    = "0.4"
nphysics2d      = "0.11"
ncollide2d      = "0.19"
rand            = "0.7.0"

# logging
log="0.4"
env_logger = "0.6"

#utilities
lazy_static = "1.0"
failure = "0.1"
strum = "0.15"
strum_macros = "0.15"
mopa = "0.2"
hashbrown = "0.5"

# rendering
#gfx-hal = "0.2"
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "a084a1f2fec6c9ed928c53e2dc8c1761782b9019" }
shaderc = "0.6"
image="0.22"
#rendy = "0.3"
rendy = { git = "https://github.com/amethyst/rendy.git", rev = "a8ac0de977a28d09592d615f8857461622833443" }

# imgui
imgui = { version = "0.2.0", optional = true }
imgui-sys = { version = "0.2.0", optional = true }
imgui-winit-support = { version = "0.2.0", default-features = false, features = ["winit-20"], optional = true }

# imgui-inspect
imgui-inspect = { version = "0.3", optional = true }
imgui-inspect-derive = { version = "0.3", default-features = false }

#serialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# minimum
minimum = { path = "../minimum" }
minimum-framework = { path = "../minimum-framework" }

[dependencies.gfx-backend-vulkan]
version = "0.2"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.2"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.2"
optional = true
