[package]
name = "minimum-examples"
version = "0.0.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async_support = ["minimum/async_support"]

[dev-dependencies]
minimum = { path = "../minimum" }
futures = "0.1"

[[example]]
name = "hello_world_async"
required-features = ["async_support"]

[[example]]
name = "simple_async"
required-features = ["async_support"]