[package]
name = "minimum-examples"
version = "0.0.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
publish = false

[features]
async_support = ["minimum/async_support"]

[dev-dependencies]
minimum = { path = "../minimum" }
futures = "0.1"
named_type = "0.2"
named_type_derive = "0.2"

[[example]]
name = "hello_world_async"
required-features = ["async_support"]

[[example]]
name = "simple_async"
required-features = ["async_support"]