[package]
name = "minimum-framework"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4"

# math
nalgebra        = { version = "0.18", features = [ "serde-serialize" ] }
nalgebra-glm    = "0.4"
nphysics2d      = "0.11"
ncollide2d      = "0.19"
rand            = "0.7.0"

minimum = { path = "../minimum", features = ["async_support", "nightly"] }

serde = "1.0"
serde_json = "1.0"

lazy_static = "1.0"
failure = "0.1"
strum = "0.15"
strum_macros = "0.15"
named_type = "0.2"
named_type_derive = "0.2"
mopa = "0.2"
hashbrown = "0.5"

#hoping imgui support can be removed by breaking "framework" into an "editor" crate

imgui-inspect = { path = "../../imgui-inspect/imgui-inspect" }
imgui-inspect-derive = { path = "../../imgui-inspect/imgui-inspect-derive" }

imgui = "0.1.0-pre"
imgui-sys = "0.1.0-pre"