[package]
name = "minimum-framework"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
editor = ["imgui", "imgui-sys", "imgui-inspect", "imgui-inspect-derive/generate_code"]
dim2 = ["ncollide2d"]
dim3 = ["ncollide3d"]

[dependencies]
log="0.4"

# math
nalgebra        = { version = "0.18", features = [ "serde-serialize" ] }
nalgebra-glm    = "0.4"
#nphysics2d      = { version = "0.11", optional = true }
ncollide2d      = { version = "0.19", optional = true }
#nphysics3d      = { version = "0.11", optional = true }
ncollide3d      = { version = "0.19", optional = true }
rand            = "0.7.0"

minimum-base = { path = "../minimum-base", features = ["std"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

lazy_static = "1.0"
failure = "0.1"
strum = "0.15"
strum_macros = "0.15"
mopa = "0.2"
hashbrown = "0.5"

#imgui-inspect = { path = "../../imgui-inspect/imgui-inspect", optional = true }
#imgui-inspect-derive = { path = "../../imgui-inspect/imgui-inspect-derive", default-features = false }

#imgui-inspect = { git = "https://github.com/aclysma/imgui-inspect.git", optional = true }
#imgui-inspect-derive = { git = "https://github.com/aclysma/imgui-inspect.git", default-features = false }

imgui-inspect = { version = "0.3", optional = true }
imgui-inspect-derive = { version = "0.3", default-features = false }

imgui = { version = "0.2.0", optional = true }
imgui-sys = { version = "0.2.0", optional = true }