[package]
name = "minimum-game"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimum-kernel = { path = "../minimum-kernel" }
minimum-math = { path = "../minimum-math" }

imgui = "0.4"

legion = { version = "0.3", default-features = false, features = ["serialize"] }

glam = { version = "0.8.5", features = ["serde"] }

log="0.4"