[package]
name = "minimum-kernel"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures-executor = "0.3.5"
atelier-assets = { git = "https://github.com/aclysma/atelier-assets", branch = "minimum-0.3", features = ["serde_importers", "type_uuid", "rpc_io"] }
legion = { version = "0.3", default-features = false, features = ["serialize"] }

legion-transaction = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
legion-prefab = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
prefab-format = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }

structopt = "0.3"
serde = "1"
uuid = "0.8"
type-uuid = "0.1"
image2 = { version = "0.11", features = [ "ser" ] }
inventory = "0.1"

# We need this PR (https://github.com/servo/bincode/pull/288) but it's not published yet
bincode = "1.3.1"
mopa = "0.2"
itertools = "0.8"

serde-diff = "0.3"

ron = "0.5"
erased-serde = "0.3"
fnv = "1.0"

crossbeam-channel = "0.4"

log="0.4"