[package]
name = "minimum-math"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"

glam = { version = "0.8.5", features = ["serde"] }

imgui = "0.3"

imgui-inspect-derive = "0.4"
imgui-inspect = "0.4"

log="0.4"
assert_approx_eq = "1.1"