[package]
name = "minimum-math"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"

glam = { version = "0.8.5", features = ["serde"] }

imgui = "0.5"

imgui-inspect-derive = "0.6"
imgui-inspect = "0.6"

log="0.4"
assert_approx_eq = "1.1"

nalgebra = { version = "0.18", features = [ "serde-serialize" ], optional = true }
nalgebra-glm = { version = "0.4", optional = true }

[features]
default = []
na_conversion = ["nalgebra", "nalgebra-glm"]