[package]
name = "minimum-transform"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimum-math = { path = "../minimum-math" }

atelier-assets = { git = "https://github.com/amethyst/atelier-assets" }

legion-transaction = { git = "https://github.com/kabergstrom/prefab" }
legion-prefab = { git = "https://github.com/kabergstrom/prefab" }
prefab-format = { git = "https://github.com/kabergstrom/prefab" }

glam = { version = "0.8.5", features = ["serde"] }

imgui = "0.3"

imgui-inspect-derive = "0.4"
imgui-inspect = "0.4"

structopt = "0.3"
serde = "1"
uuid = "0.8"
type-uuid = "0.1"
inventory = "0.1"
serde-diff = "0.3"

log="0.4"