[package]
name = "minimum-transform"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimum-math = { path = "../minimum-math" }

atelier-assets = { git = "https://github.com/amethyst/atelier-assets" }
legion = { version = "0.3", default-features = false, features = ["serialize"] }

legion-transaction = { git = "https://github.com/aclysma/prefab", branch="minimum" }
legion-prefab = { git = "https://github.com/aclysma/prefab", branch="minimum" }
prefab-format = { git = "https://github.com/aclysma/prefab", branch="minimum" }

glam = { version = "0.8.5", features = ["serde"] }

imgui = "0.4"

imgui-inspect-derive = "0.5"
imgui-inspect = "0.5"

structopt = "0.3"
serde = "1"
uuid = "0.8"
type-uuid = "0.1"
inventory = "0.1"
serde-diff = "0.3"

log="0.4"