[package]
name = "minimum"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

[features]
default = []
editor = ["minimum-framework", "minimum-framework/editor"]
dim2 = ["minimum-framework", "minimum-framework/dim2"]
dim3 = ["minimum-framework", "minimum-framework/dim3"]

[dependencies]
minimum-base = { path = "../minimum-base" }
minimum-framework = { path = "../minimum-framework", optional = true }