[package]
name = "minimum-sdl2"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimum = { path = "../../minimum" }

sdl2 = { version = ">=0.33" }

imgui = "0.5"
imgui-sdl2 = "0.12.0"

glam = { version = "0.8.5", features = ["serde"] }

log="0.4"
