[package]
name = "minimum-skulpin"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimum = { path = "../../minimum" }

skulpin = "0.9"

imgui-inspect-derive = "0.5"
imgui-inspect = "0.5"

imgui = "0.4"
#imgui-sdl2 = "0.11.0"

atelier-assets = { git = "https://github.com/aclysma/atelier-assets", branch = "minimum-0.3" }

legion-transaction = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
legion-prefab = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
prefab-format = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }

legion = { version = "0.3", default-features = false, features = ["serialize"] }


nalgebra = { version = "0.18", features = [ "serde-serialize" ] }
nalgebra-glm = "0.4"
ncollide3d = "0.20"

structopt = "0.3"
serde = "1"
uuid = "0.8"
type-uuid = "0.1"
image2 = { version = "0.11", features = [ "ser" ] }
inventory = "0.1"

serde-diff = "0.3"

glam = { version = "0.8.5", features = ["serde"] }

log="0.4"