[package]
name = "minimum-winit"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimum = { path = "../.." }

winit = ">=0.21"

imgui = "0.3"
# must be exactly 0.3.0, 0.3.1 pinned a particular winit version
imgui-winit-support = "=0.3.0"

glam = { version = "0.8.5", features = ["serde"] }

log="0.4"