[package]
name = "example-sdl2"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin = { version = "0.8.1", default-features = false, features = ["skulpin_sdl2", "skia_complete"] }
sdl2 = { version = "0.33", features = ["bundled", "static-link"] }

minimum = { path = "../.." }

log="0.4"
env_logger = "0.6"