[package]
name = "example-sdl2"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimum = { path = "../../minimum" }
minimum-sdl2 = { path = "../../contrib/minimum-sdl2" }
minimum-skulpin = { path = "../../contrib/minimum-skulpin" }
minimum-nphysics2d = { path = "../../contrib/minimum-nphysics2d" }

example-shared = { path = "../example-shared" }

sdl2 = { version = "0.34", features = ["bundled", "static-link"] }

skulpin = { version = "0.10", default-features = false, features = ["skulpin_sdl2", "skia_complete"] }
skulpin-plugin-imgui = "0.6"

imgui-inspect-derive = "0.5"
imgui-inspect = "0.5"

imgui = "0.4"
imgui-sdl2 = "0.11.0"

atelier-assets = { git = "https://github.com/aclysma/atelier-assets", branch = "minimum-0.3" }

legion-transaction = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
legion-prefab = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
prefab-format = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }

legion = { version = "0.3", default-features = false, features = ["serialize"] }

glam = { version = "0.8.5", features = ["serde"] }

serde = "1"
uuid = "0.8"
type-uuid = "0.1"
itertools = "0.8"

serde-diff = "0.3"

log="0.4"
env_logger = "0.6"