[package]
name = "example-shared"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimum = { path = "../.." }

imgui-inspect-derive = "0.4"
imgui-inspect = "0.4"

imgui = "0.3"
imgui-sdl2 = "0.9.0"

atelier-assets = { git = "https://github.com/amethyst/atelier-assets" }

legion-transaction = { git = "https://github.com/aclysma/prefab", branch="minimum" }
legion-prefab = { git = "https://github.com/aclysma/prefab", branch="minimum" }
prefab-format = { git = "https://github.com/aclysma/prefab", branch="minimum" }

legion = { git = "https://github.com/aclysma/legion", default-features = false, features = ["serialize"], branch="minimum" }

glam = { version = "0.8.5", features = ["serde"] }

#structopt = "0.3"
serde = "1"
uuid = "0.8"
type-uuid = "0.1"
#inventory = "0.1"
itertools = "0.8"

serde-diff = "0.3"

log="0.4"
env_logger = "0.6"